# Masstuffy

./: Cargo.toml  README.md
.sqlx/: query-201b62ea00656cd80d24d3ee665194fef0f2d27941b5320868ea48fffd41f461.json  query-35faffc9cf99a94e92a89f9a17d6589848416371c862531f1d7cd51ee90452e2.json  query-378f6692f6ffd288081bf8000eebea1505790908df42475b711bf1c05b1322f5.json  query-6009aff79952737a1399fc4da70df1386c2bc29acd221a8bc2ad14776bdb39f1.json  query-60e84d31b3362dcd52a3ee2e3c7510b076164f91b5034ab4ce51e7235a32a197.json  query-631396977e842abe17a9ed47005c411f162acb4aa397082380037804d2c9409c.json  query-7212063b018e9ddde4d8b0934aec9d696250add823dea42315b1294f6104daf8.json  query-99415a77c1e314f91ca98ba9a8796ce4da353de2651d6aa2d228826db767e76c.json  query-9ca23ea66f98ecb332be1e9cac7acd473000c2ea76eb3253343d858df8077001.json  query-a006b56f3111374d81f54594a5a0077744bcc711b34d86fff702e7fc53882aae.json  query-bab563c7b608caa26fac813324943f44d8bdfafd1338acadb3e6a1fed2a4f52b.json  query-be79cef8181d354ec0c8260846484fbbc306c82aa81656886ac37db7a34ed62d.json  query-d338c3c1d056db2728e162e607dd1f25cd47f0e053f35a5663238c5c053b84d4.json  query-dd6781078523b0b9306aa5a76a8443055681a69a11a2a071b28a58fda72a6359.json  query-df0e19cf806b401ebc9c08de906d8aa5566b10a83ae483826c9717cda74d3f88.json  query-e189867cc3ac92ea6246d1a5379755c9ae3a94a8e18e48a4854b7d6e3151e7a3.json
doc/: Endpoints.md  EnvironmentVariables.md  FileLayout.md
migrations/: 20250322160806_initial.sql  20250322194835_uri.sql  20250405120329_drop-unique-warc-id-contraint.sql  20250406144523_add-dict-info.sql  (+3 more)
src/: constants.rs  (+2 more)
(+11 files in other folders)
