[package]
name = "masstuffy"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/5IGI0/masstuffy"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
memmem = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
