[package]
name = "masstuffy"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/5IGI0/masstuffy"

[dependencies]
anyhow = "1.0.97"
async-compression = { version = "0.4.22", features = ["gzip", "tokio", "xz", "zstd"] }
async-std = { version = "1.13.1", features = ["attributes", "tokio1"] }
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
memmem = "0.1.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-async-std", "chrono"] }
tide = "0.16.0"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
zstd = "0.13.3"
